--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,16 @@
 <resources>
     <string name="app_name">Bank Czasu</string>
+    <string name="title_activity_main2">Main2Activity</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="action_settings">Settings</string>
+    <string name="offers">Oferty</string>
+    <string name="user">Użytkownik</string>
+    <string name="log_out">Wyloguj się</string>
+    <string name="my_profile">Mój profil</string>
+
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
