--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,14 +3,24 @@
     <string name="title_activity_main2">Main2Activity</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Android Studio</string>
-    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_subtitle">Aplikacja do wzajemniej wymiany usług</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
     <string name="offers">Oferty</string>
     <string name="user">Użytkownik</string>
     <string name="log_out">Wyloguj się</string>
     <string name="my_profile">Mój profil</string>
+    <string name="others">Inne</string>
+    <string name="about_app">O aplikacji</string>
+    <string name="tutorial">Poradnik</string>
+    <string name="messages">Wiadomości</string>
+    <string name="sign_in">Zaloguj się</string>
+    <string name="sign_in_with_google">Zaloguj Się z Google</string>
+    <string name="change_login">Zmień nazwę użytkownika</string>
+    <string name="change_email">Zmień adres email</string>
+    <string name="change_password">Zmień hasło</string>
+    <string name="or">LUB</string>
+    <string name="sign_up">Zarejestruj się</string>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
