--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,11 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
     <string name="offers">Oferty</string>
+    <string name="my_offerts">Moje Oferty</string>
     <string name="user">Użytkownik</string>
+    <string name="email">Email</string>
+    <string name="password">Hasło</string>
+    <string name="user_name">Nazwa użytkownika</string>
     <string name="log_out">Wyloguj się</string>
     <string name="my_profile">Mój profil</string>
     <string name="others">Inne</string>
@@ -21,6 +25,8 @@
     <string name="change_password">Zmień hasło</string>
     <string name="or">LUB</string>
     <string name="sign_up">Zarejestruj się</string>
+    <string name="change">Zmień</string>
+    <string name="cancel">Anuluj</string>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
