--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">Bank Czasu</string>
-    <string name="title_activity_main2">Main2Activity</string>
+    <string name="app_name_extended">Bank Czasu - Aplikacja Mobilna do wymiany usług</string>
+    <string name="version">Wersja 1.0.0</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_subtitle">Aplikacja do wzajemniej wymiany usług</string>
@@ -23,10 +24,16 @@
     <string name="change_login">Zmień nazwę użytkownika</string>
     <string name="change_email">Zmień adres email</string>
     <string name="change_password">Zmień hasło</string>
+    <string name="old_password">Stare hasło</string>
+    <string name="new_password">Nowe hasło</string>
+    <string name="repeat_new_password">Potwórz nowe hasło</string>
     <string name="or">LUB</string>
     <string name="sign_up">Zarejestruj się</string>
     <string name="change">Zmień</string>
     <string name="cancel">Anuluj</string>
+    <string name="close">Zamknij</string>
+
+    <string name="about_app_description">Autor aplikacji:\nDenis Lewandowski\n\nAplikacja stworzona w ramach pracy inżynierskiej.</string>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
